# bfarchive

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  build  build.cmd  configure  filter-coverage.py
Source/: ArchiveCreator.cpp  ArchiveCreator.h  ArchiveExtractor.cpp  ArchiveExtractor.h  ArchiveLister.cpp  ArchiveLister.h  Main.cpp  Main.h  UnixMain.cpp  Version.h  Version.rc  WindowsMain.cpp
Test/: ArchiveReaderTest.cpp  ArchiveWriterTest.cpp  ArgParserTest.cpp  BFArchiveTest.py  CMakeLists.txt  DataRefTest.cpp  DateTimeTest.cpp  DeflateStreamTest.cpp  ErrorTest.cpp  FilesystemTest.cpp  InflateStreamTest.cpp  LocalPathToUTF8PathTest.cpp  NumberTest.cpp  ScopedMock.h  StreamTest.cpp  TestUtility.cpp  TestUtility.h  UTF8Test.cpp  UnixFilesystemTest.cpp
